syntax = "proto3";

option csharp_namespace = "SenseNet.Search.Lucene29.Centralized.GrpcService";
package SenseNet.Search.Lucene29.Centralized.GrpcService;

import "Protos/sensenet.search.types.proto";

service GrpcSearch {
    rpc ClearIndex (ClearIndexRequest) returns (ClearIndexResponse);
    rpc ReadActivityStatusFromIndex (ReadActivityStatusRequest) returns (IndexingActivityStatus);
    rpc WriteActivityStatusToIndex (IndexingActivityStatus) returns (WriteActivityStatusResponse);
    rpc WriteIndex (WriteIndexRequest) returns (WriteIndexResponse);
    rpc SetIndexingInfo (SetIndexingInfoRequest) returns (SetIndexingInfoResponse);

    rpc ExecuteQuery (QueryRequest) returns (QueryResultIds);
    rpc ExecuteQueryAndProject (QueryRequest) returns (QueryResultProjections);
}